external-secrets-operator/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_secretstore-validate.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v0.16.0
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-0.16.0
  name: secretstore-validate
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: external-secrets-webhook
      namespace: external-secrets
      path: /validate-external-secrets-io-v1-secretstore
  name: validate.secretstore.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - secretstores
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: external-secrets-webhook
      namespace: external-secrets
      path: /validate-external-secrets-io-v1-clustersecretstore
  name: validate.clustersecretstore.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - clustersecretstores
    scope: Cluster
  sideEffects: None
  timeoutSeconds: 5
